implemented path interpolation